--- a/Kotlin/3.协程.md
+++ b/Kotlin/3.协程.md
@@ -1,8 +1,111 @@
+# 概念
+
+线程：一个进程可以有很多线程，每条线程并行执行不同的任务
+
+协程：协程是跑在线程上的，一个线程可以同时跑多个协程
+
+# 基础知识
+
+## suspend
+
+* `suspend`函数，称为挂起函数，在协程中进行调用或挂起函数中调用
+* 非`suspend`函数不可参与协程任务
+* 协程中有多个挂起函数，它们的执行是顺序的，需要等待前一个挂起函数恢复，才能执行后面的挂起函数
+
+```kotlin
+class Demo {
+    @Test
+    fun test() {
+        GlobalScope.launch {
+            say()
+            run()
+        }
+
+        Thread.sleep(20)
+
+        println("结束")
+    }
+
+    suspend fun say() {
+        println("说话")
+    }
+
+    suspend fun run() {
+        println("跑步")
+    }
+}
+
+//输出
+说话
+跑步
+结束
+```
+
+## runBlocking
+
+* 会阻塞线程，直到`runBlocking`内部协程执行完毕
+
+```kotlin
+class Demo {
+    fun run() = runBlocking {
+        repeat(10) {
+            println("循环第${it}次")
+        }
+    }
+
+    @Test
+    fun test() {
+        println("开始")
+        run()
+        println("结束")
+    }
+}
+
+//输出
+开始
+循环第0次
+循环第1次
+循环第2次
+循环第3次
+循环第4次
+循环第5次
+循环第6次
+循环第7次
+循环第8次
+循环第9次
+结束
+```
+
+`runBlocking<Unit> { …… }`用于包装函数，泛型为函数返回值类型
+
+```kotlin
+class Demo {
+    fun run() = runBlocking<String> {
+        println("协程")
+        return@runBlocking "执行完毕"
+    }
+
+    @Test
+    fun test() {
+        println("开始")
+        val msg = run()
+        println(msg)
+        println("结束")
+    }
+}
+
+//输出
+开始
+协程
+执行完毕
+结束
+```
+
+
+
 # 启动协程
 
 ## launch启动
-
-* `launch`启动协程
 
 ```kotlin
 class Test {
@@ -76,117 +179,6 @@ class Demo {
 
 //输出
 3
-```
-
-## runBlocking
-
-* 会阻塞线程，直到`runBlocking`内部协程执行完毕
-
-```kotlin
-class Demo {
-    fun run() = runBlocking {
-        repeat(10) {
-            println("循环第${it}次")
-        }
-    }
-
-    @Test
-    fun test() {
-        println("开始")
-        run()
-        println("结束")
-    }
-}
-
-//输出
-开始
-循环第0次
-循环第1次
-循环第2次
-循环第3次
-循环第4次
-循环第5次
-循环第6次
-循环第7次
-循环第8次
-循环第9次
-结束
-```
-
-`runBlocking<Unit> { …… }`用于包装函数，泛型为函数返回值类型
-
-```kotlin
-class Demo {
-    fun run() = runBlocking<String> {
-        println("协程")
-        return@runBlocking "执行完毕"
-    }
-
-    @Test
-    fun test() {
-        println("开始")
-        val msg = run()
-        println(msg)
-        println("结束")
-    }
-}
-
-//输出
-开始
-协程
-执行完毕
-结束
-```
-
-## suspend
-
-* **`suspend`修饰的函数，称为挂起函数，在协程中进行调用或挂起函数中调用**
-* **协程中有多个挂起函数，它们的执行是顺序的，需要等待前一个挂起函数恢复，才能执行后面的挂起函数**
-
-```kotlin
-class Demo {
-    @Test
-    fun test() {
-        GlobalScope.launch {
-            say()
-            run()
-        }
-
-        Thread.sleep(20)
-
-        println("结束")
-    }
-
-    suspend fun say() {
-        println("说话")
-    }
-
-    suspend fun run() {
-        println("跑步")
-    }
-}
-
-//输出
-说话
-跑步
-结束
-```
-
-## 协程很轻量
-
-* **它启动了 10 万个协程，并且在一秒钟后，每个协程都输出一个点。 现在，尝试使用线程来实现。会发生什么？**
-
-```
-import kotlinx.coroutines.*
-
-fun main() = runBlocking {
-    repeat(100_000) { // 启动大量的协程
-        launch {
-            delay(1000L)
-            print(".")
-        }
-    }
-}
 ```
 
 # 取消&超时
