--- a/Kotlin/4.协程.md
+++ b/Kotlin/4.协程.md
@@ -382,3 +382,18 @@ fun main(args: Array<String>) = runBlocking {
 Done!
 ```
 
+# 协程上下文
+
+## withContext
+
+用于协程间进行转换
+
+```kotlin
+            withContext(Dispatchers.IO) {
+                //子协程
+                withContext(Dispatchers.Main) {
+                    //主协程
+                }
+            }
+```
+
