--- a/Android/6.NDK/2.JNI.md
+++ b/Android/6.NDK/2.JNI.md
@@ -49,3 +49,136 @@ env->NewStringUTF("From native to java");
 | jstring      | String         |
 | jByteArray   | byte[]         |
 | jObjectArray | object[]       |
+
+# JNI API
+
+## 返回数组
+
+> 方式1：Java通过JNI传递给C/C++，经过处理后，再复制到Java数组并返回
+
+native方法
+
+```java
+public native int[] getArray(int[] arr);
+```
+
+C/C++代码
+
+```c++
+#include <jni.h>
+#include <stdio.h>
+#include <android/log.h>
+
+extern "C" JNIEXPORT jintArray JNICALL
+Java_com_aib_opencv_demo_MainActivity_getArray(JNIEnv *env, jobject, jintArray arr) {
+    //获取JNI数组长度
+    int size = env->GetArrayLength(arr);
+    //得到JNI数组指针
+    int *p_arr = env->GetIntArrayElements(arr, JNI_FALSE);
+    //数组操作
+    for (int i = 0; i < size; ++i) {
+        *(p_arr + i) *= 10;
+    }
+    //将C数组设置到JNI数组
+    env->SetIntArrayRegion(arr, 0, size, p_arr);
+    return arr;
+}
+```
+
+> 方式2：在C中直接操作元素，然后把C数组复制到Java数组中，并更新Java数组
+
+native方法
+
+```java
+public native void getArray(int[] arr);
+```
+
+C/C++代码
+
+```c++
+#include <jni.h>
+#include <stdio.h>
+#include <android/log.h>
+
+extern "C" JNIEXPORT void JNICALL
+Java_com_aib_opencv_demo_MainActivity_getArray(JNIEnv *env, jobject, jintArray arr) {
+    //获取JNI数组长度
+    int size = env->GetArrayLength(arr);
+    //得到JNI数组指针
+    int *p_arr = env->GetIntArrayElements(arr, JNI_FALSE);
+    //数组操作
+    for (int i = 0; i < size; ++i) {
+        *(p_arr + i) *= 10;
+    }
+    //将C数组设置到JNI数组
+    env->SetIntArrayRegion(arr, 0, size, p_arr);
+}
+```
+
+> 方法3：在C代码中新建Java数组，然后把C中数组的元素复制到Java数组中在返回给Java
+
+native方法
+
+```java
+public native int[] getArray(int[] arr);
+```
+
+C/C++代码
+
+```c++
+#include <jni.h>
+#include <stdio.h>
+#include <android/log.h>
+
+extern "C" JNIEXPORT jintArray JNICALL
+Java_com_aib_opencv_demo_MainActivity_getArray(JNIEnv *env, jobject, jintArray arr) {
+    //获取JNI数组长度
+    int size = env->GetArrayLength(arr);
+    //得到JNI数组指针
+    int *p_arr = env->GetIntArrayElements(arr, JNI_FALSE);
+    //创建JNI数组
+    jintArray jarray = env->NewIntArray(size);
+    //数组操作
+    for (int i = 0; i < size; ++i) {
+        *(p_arr + i) *= 10;
+    }
+    //将C数组设置到JNI数组
+    env->SetIntArrayRegion(jarray, 0, size, p_arr);
+
+    return jarray;
+}
+```
+
+> 方法4：ReleaseArrayElements实现
+
+native方法
+
+```java
+public native int[] getArray(int[] arr);
+```
+
+C/C++代码
+
+```c++
+#include <jni.h>
+#include <stdio.h>
+#include <android/log.h>
+
+extern "C" JNIEXPORT jintArray JNICALL
+Java_com_aib_opencv_demo_MainActivity_getArray(JNIEnv *env, jobject, jintArray arr) {
+    //获取JNI数组长度
+    int size = env->GetArrayLength(arr);
+    //得到JNI数组指针
+    int *p_arr = env->GetIntArrayElements(arr, JNI_FALSE);
+    //创建JNI数组
+    jintArray jarray = env->NewIntArray(size);
+    //数组操作
+    for (int i = 0; i < size; ++i) {
+        *(p_arr + i) *= 10;
+    }
+    //同步并释放
+    env->ReleaseIntArrayElements(jarray, p_arr, 0);
+
+    return jarray;
+}
+```
