--- a/Android/5.库/12.OpenCV.md
+++ b/Android/5.库/12.OpenCV.md
@@ -23,7 +23,7 @@
 
 # Java
 
-### line函数
+## line函数
 
 在图片上画线
 
@@ -65,3 +65,30 @@ shift：坐标小数点位数
 
 
 # NDK
+
+## line函数
+
+![](微信截图_20200319100935.png)
+
+```c++
+/**
+ * 给图片画线
+ */
+extern "C" JNIEXPORT jintArray JNICALL
+Java_com_aib_opencv_demo_MainActivity_drawLine(JNIEnv *env, jobject, jintArray pixel, jint rows,
+                                               jint cols) {
+    int length = env->GetArrayLength(pixel);
+
+    jint *pixel_p = env->GetIntArrayElements(pixel, JNI_FALSE);
+
+    Mat mat = Mat(rows, cols, CV_8UC4, pixel_p);
+
+    //Scalar参数顺序为：BGRA
+    line(mat, Point(0, 0), Point(mat.rows, mat.cols), Scalar(0, 0, 255, 255), 1, LINE_AA, 0);
+
+    jintArray result = env->NewIntArray(length);
+    env->SetIntArrayRegion(result, 0, length, pixel_p);
+    return result;
+}
+```
+
