--- a/Java/1.SE/3.集合.md
+++ b/Java/1.SE/3.集合.md
@@ -284,7 +284,36 @@ public class Test {
 }
 ```
 
+### LinkedHashSet集合
 
+我们知道HashSet保证元素唯一，可是元素存放进去是没有顺序的，那么我们要保证有序，怎么办呢？
+
+在HashSet下面有一个子类`java.util.LinkedHashSet`，它是链表和哈希表组合的一个数据存储结构。
+
+演示代码如下:
+
+~~~java
+public class LinkedHashSetDemo {
+	public static void main(String[] args) {
+		Set<String> set = new LinkedHashSet<String>();
+		set.add("bbb");
+		set.add("aaa");
+		set.add("abc");
+		set.add("bbc");
+        Iterator<String> it = set.iterator();
+		while (it.hasNext()) {
+			System.out.println(it.next());
+		}
+	}
+}
+结果：
+  bbb
+  aaa
+  abc
+  bbc
+~~~
+
+## 
 
 Map集合
 
