--- a/Android/5.库/3.Retrofit.md
+++ b/Android/5.库/3.Retrofit.md
@@ -213,6 +213,6 @@ fun register(@PartMap params: MutableMap<String, RequestBody>, @Part file: Multi
 ```java
     @POST("upload")
     @Multipart
-    fun register(@PartMap name: MutableMap<String, RequestBody>, @Part file: List<MultipartBody.Part>): Observable<BaseEntity<List<String>>>
+    fun register(@PartMap name: MutableMap<String, Any>, @Part file: List<MultipartBody.Part>): Observable<BaseEntity<List<String>>>
 ```
 
